--- a/socket/src/main/resources/public/index.html
+++ b/socket/src/main/resources/public/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
-    <script src="http://static.xiaomo.info/jquery.js"></script>
+    <!--<script src="http://static.xiaomo.info/jquery.js"></script>-->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <title>登录</title>
 </head>
 <body>
@@ -24,8 +25,9 @@
                                 <div class="control-group">
                                     <div class="controls">
                                         <div class="">
-                                            <input type="text" style="border: 1px;"  id="userName" name="userName" placeholder="请随便输入一个昵称" onkeyup="keyEnter(event)">
-                                            <a class="btn btn-success btn-sm" onclick="login()" >登录</a>
+                                            <input type="text" style="border: 1px;" id="userName" name="userName"
+                                                   placeholder="请随便输入一个昵称" onkeyup="keyEnter(event)">
+                                            <a class="btn btn-success btn-sm" onclick="login()">登录</a>
                                         </div>
                                     </div>
                                 </div>
@@ -42,6 +44,7 @@
 <script>
     function login() {
         var username = $("#userName").val();
+        console.info(username);
         window.location.href = "http://localhost:8081/chat.html?username=" + username;
     }
     function keyEnter(event) {
